# nfs-utils

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.mk.in  config.sub  configure  configure.ac  configure.in  nfs-utils.spec  nfs-utils.spec.in  nfs.conf  rules.mk
aclocal/: bsdsignals.m4  ipv6.m4  kerberos5.m4  keyutils.m4  libblkid.m4  libcap.m4  libnfsidmap.m4  librpcsecgss.m4  libsqlite3.m4  libtirpc.m4  rpcsec_vers.m4  tcp-wrappers.m4
debian/: changelog  control  copyright  etc.exports  gssapi_mech.conf  idmapd.conf  nfs-common.conffiles  nfs-common.config  nfs-common.default  nfs-common.dirs  nfs-common.files  nfs-common.init  nfs-common.install  nfs-common.postinst  nfs-common.postrm  nfs-common.prerm  nfs-common.templates  nfs-common.templates.fr  nfs-common.templates.ru  nfs-kernel-server.conffiles  nfs-kernel-server.config  nfs-kernel-server.default  nfs-kernel-server.dirs  nfs-kernel-server.init  nfs-kernel-server.postinst  nfs-kernel-server.postrm  nfs-kernel-server.prerm  nfs-kernel-server.templates  nfs-kernel-server.templates.de  nfs-kernel-server.templates.fr  nfs-kernel-server.templates.ru  nhfsstone.files  nhfsstone.postinst  nhfsstone.prerm  rules
debian/po/: POTFILES.in  de.po  fr.po  ja.po  pt_BR.po  ru.po  templates.pot
etc/debian/: nfs-kernel-server
etc/nodist/: nfs-client  nfs-server
etc/redhat/: nfs  nfs.init  nfslock.init  rpcidmapd.init
linux-nfs/: Makefile.in
support/: Makefile  Makefile.in
support/export/: Makefile  Makefile.am  Makefile.in  client.c  export.c  keys.c  (+4 more)
support/include/: Makefile  Makefile.am  Makefile.in  conffile.h  config.h.in  conn.h  exportfs.h  fstab.h  ha-callout.h  misc.h  nfs_mntent.h  nfslib.h  nfsrpc.h  nsm.h  rpcdispatch.h  rpcmisc.h  rpcsec.h  sockaddr.h  tcpwrapper.h  version.h  vsock.h  xcommon.h  xio.h  xlog.h  xmalloc.h  ypupdate.h
support/include/gssapi/: gssapi.h
support/include/nfs/: Makefile.in  debug.h  export.h  nfs.h
support/include/rpcsvc/: Makefile.in
support/include/sys/: Makefile.in
support/include/sys/fs/: Makefile.in
support/nfs/: Makefile  Makefile.am  Makefile.in  atomicio.c  cacheio.c  clients.c  conffile.c  conn.c  exports.c  fstab.c  getfh.c  getport.c  keytab.c  lockdsvc.c  mydaemon.c  nfs_mntent.c  nfsclient.c  nfsctl.c  nfsexport.c  nfssvc.c  rmtab.c  rpc_socket.c  rpcdispatch.c  rpcmisc.c  svc_create.c  svc_socket.c  wildmat.c  xio.c  xlog.c  xmalloc.c  ypupdate_xdr.c
systemd/: Makefile.am  README  auth-rpcgss-module.service  nfs-blkmap.service  nfs-blkmap.target  nfs-client.target  nfs-config.service  nfs-config.service.in  nfs-idmapd.service  nfs-mountd.service  nfs-secure.target  nfs-server-generator.c  nfs-server.service  nfs-server.target  nfs.conf.man  proc-fs-nfsd.mount  rpc-gssd.service  rpc-gssd.service.in  rpc-pipefs-generator.c  rpc-statd-notify.service  rpc-statd.service  rpc-svcgssd.service  systemd.c  var-lib-nfs-rpc_pipefs.mount
tests/: Makefile.am  t0001-statd-basic-mon-unmon.sh  t0002-vsock-basic.sh  test-lib.sh
tools/: Makefile  Makefile.am  Makefile.in
tools/getiversion/: Makefile  Makefile.am  Makefile.in  getiversion.c
tools/getkversion/: Makefile  Makefile.am  Makefile.in  getkversion.c
tools/rpcdebug/: Makefile  Makefile.am  Makefile.in  neat_idea.c  rpcdebug.c
utils/: Makefile  Makefile.am  Makefile.in
utils/blkmapd/: device-discovery.c  device-inq.c  device-process.c
utils/exportfs/: Makefile  Makefile.in  exportfs.c  exportfs.man  exports.man  nfsd.man
utils/gssd/: Makefile  Makefile.am  Makefile.in  cacheio.c  cacheio.h  context.c  context.h  context_heimdal.c  context_lucid.c  context_mit.c  context_spkm3.c  err_util.c  err_util.h  gss_clnt_send_err.c  gss_destroy_creds  gss_names.c  gss_names.h  gss_oids.c  gss_oids.h  gss_util.c  gss_util.h  gssd.c  gssd.h  gssd.man  gssd_main_loop.c  gssd_proc.c  krb5_util.c  krb5_util.h  svcgssd.c  svcgssd.man  svcgssd_krb5.c  svcgssd_main_loop.c  svcgssd_mech2file.c  svcgssd_proc.c  write_bytes.h
utils/gssdestroycreds/: Makefile
utils/idmapd/: Makefile  Makefile.am  Makefile.in  cfg.c  idmapd.c  idmapd.conf.man  idmapd.man  nfs_idmap.h  setproctitle.c  strlcat.c
utils/lockd/: Makefile  Makefile.am  Makefile.in  lockd.c  lockd.man
utils/mount/: Makefile.am  configfile.c  error.c  error.h  fstab.c  fstab.h  mount.c  mount.nfs.man  mount_config.h  mount_constants.h  mount_libmount.c  network.c  network.h  nfs.man  nfs4_mount.h  nfs4mount.c  nfs_mount.h  nfsmount.c  nfsmount.conf  nfsumount.c  nfsumount.h  parse_opt.c  parse_opt.h  stropts.c  stropts.h  token.h  umount.nfs.man  utils.c  utils.h  version.h
utils/mountd/: Makefile  Makefile.am  Makefile.in  auth.c  cache.c  fsloc.c  mount_dispatch.c  mount_xdr.c  mountd.c  mountd.h  mountd.man  rmtab.c  svc_run.c  v4root.c
utils/nfsd/: Makefile  Makefile.in  nfsd.c  nfsd.man  nfssvc.c  nfssvc.h
utils/nfsdcld/: Makefile.am  nfsdcld.c  nfsdcld.man  sqlite.c  sqlite.h
utils/nfsdcltrack/: Makefile.am  nfsdcld  nfsdcltrack.c  nfsdcltrack.man  sqlite.c  sqlite.h
utils/nfsidmap/: Makefile.am  nfsidmap.c  nfsidmap.man
utils/nfsstat/: Makefile  Makefile.in  nfsstat.c  nfsstat.man
utils/nhfsstone/: DISCLAIMER  Makefile  Makefile.am  Makefile.in  README  README.linux  nhfsgraph  nhfsgraph.man  nhfsnums  nhfsnums.man  nhfsrun  nhfsrun.man  nhfsstone.1  nhfsstone.c  nhfsstone.man
utils/osd_login/: Makefile.am
utils/rquotad/: Makefile  Makefile.am  Makefile.in  NEW  README.okir  hasquota.c  mntent.h  pathnames.h  quotactl.c  rquota.h  rquota.x  rquota_server.c  rquota_svc.c  rquota_xdr.c  rquotad.man
utils/showmount/: Makefile  Makefile.in  showmount.c  showmount.man
utils/statd/: COPYRIGHT  Makefile  Makefile.am  Makefile.in  callback.c  hostname.c  log.c  log.h  misc.c  monitor.c  notify.c  notlist.c  notlist.h  rmtcall.c  simu.c  simulate.c  sm-notify.8  sm-notify.c  sm-notify.man  start-statd  stat.c  statd.c  statd.h  statd.man  state.c  svc_run.c
utils/svcgssd/: Makefile  Makefile.am  Makefile.in  svcgssd.c  svcgssd.man  svcgssd_main_loop.c  svcgssd_proc.c
(+103 files in other folders)
