## Process this file with automake to produce Makefile.in

SUBDIRS = nfs rpcsvc sys

noinst_HEADERS = \
	exportfs.h \
	ha-callout.h \
	misc.h \
	nfslib.h \
	rpcdispatch.h \
	rpcmisc.h \
	rpcsec.h \
	tcpwrapper.h \
	version.h \
	xio.h \
	xlog.h \
	xmalloc.h \
	ypupdate.h

MAINTAINERCLEANFILES = Makefile.in
