## Process this file with automake to produce Makefile.in

SUBDIRS = nfs rpcsvc sys

noinst_HEADERS = \
	conn.h \
	exportfs.h \
	fstab.h \
	ha-callout.h \
	misc.h \
	nfs_mntent.h \
	nfs_paths.h \
	nfslib.h \
	rpcdispatch.h \
	rpcmisc.h \
	rpcsec.h \
	tcpwrapper.h \
	version.h \
	xio.h \
	xlog.h \
	xmalloc.h \
	xcommon.h \
	ypupdate.h

MAINTAINERCLEANFILES = Makefile.in
