## Process this file with automake to produce Makefile.in

CC=$(CC_FOR_BUILD)
LIBTOOL = @LIBTOOL@ --tag=CC

noinst_PROGRAMS = getkversion
getkversion_SOURCES = getkversion.c
getkversion_CFLAGS=$(CFLAGS_FOR_BUILD)
getkversion_CPPFLAGS=$(CPPFLAGS_FOR_BUILD)
getkversion_LDFLAGS=$(LDFLAGS_FOR_BUILD)

MAINTAINERCLEANFILES = Makefile.in
